@@ -5,7 +5,6 @@ import lombok.Data;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 
 @Data
@@ -26,6 +25,6 @@ public class Movies extends ArrayList<Movie> {
   }
 
   public Movies getByTitle(String title) {
-    return new Movies(stream().filter(m -> title.equals(m.getTitle())).collect(Collectors.toList()));
+    return new Movies(stream().filter(m -> title.equals(m.getTitle())).toList());
   }
 }
